force-app/main/default/objects/ADM_Investigation_Exception__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The person making the decision - varies by status</inlineHelpText>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Investigation_Exceptions1</relationshipName>
    <type>Lookup</type>
</CustomField>