force-app/main/default/objects/ADM_Investigation_Exception__c/fields/Decision_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Decision_Explanation__c</fullName>
    <description>Should be filled out by the Assigned To</description>
    <inlineHelpText>Should be filled out by the Assigned To</inlineHelpText>
    <label>Decision Explanation</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>