force-app/main/default/objects/ADM_Investigation_Exception__c/fields/Investigation__c.field-meta.xml
<CustomField>
    <fullName>Investigation__c</fullName>
    <label>Investigation</label>
    <referenceTo>ADM_Work__c</referenceTo>
    <relationshipName>Investigation_Exceptions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>