force-app/main/default/objects/ADM_Investigation_Exception__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>Check the Help For this page link for more examples</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Severity level upgrade</fullName>
                <default>true</default>
                <label>Severity level upgrade</label>
            </value>
            <value>
                <fullName>More status updates/assigned resources</fullName>
            </value>
            <value>
                <fullName>During business hours request for after hours resources/communication</fullName>
            </value>
            <value>
                <fullName>After hours triage/diagnosis of Sev 2</fullName>
            </value>
            <value>
                <fullName>After hours request for after hours resources</fullName>
            </value>
            <value>
                <fullName>Acknowledgment of a Severity 4 Investigation</fullName>
            </value>
            <value>
                <fullName>SLA violated by T&amp;P</fullName>
            </value>
            <value>
                <fullName>SLA violated by Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>