force-app/main/default/objects/ADM_Investigation_Exception__c/validationRules/Dec_Explanation_Empty_Status_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Dec_Explanation_Empty_Status_Approved</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c, &quot;Approved&quot;), 
Decision_Explanation__c = &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Decision_Explanation__c</errorDisplayField>
    <errorMessage>Please provide a decision explanation when setting the status to &#39;Approved&#39;.</errorMessage>
</ValidationRule>